--- a/告示牌.html
+++ b/告示牌.html
@@ -10,7 +10,7 @@
     <ul>
         <li>提醒標語(橫式)</li>
         <P></P>
-        <img src = "一次拿一個，歡樂不減少 (1).png" width="400" alt="提醒標語(橫式)">
+        <img src = "https://github.com/yijie1122/-sign-design-web-/blob/main/%E4%B8%80%E6%AC%A1%E6%8B%BF%E4%B8%80%E5%80%8B%EF%BC%8C%E6%AD%A1%E6%A8%82%E4%B8%8D%E6%B8%9B%E5%B0%91%20(1).png" width="400" alt="提醒標語(橫式)">
         <li>提醒標語(直式)</li>
         <P></P>
         <img src = "一次拿一個，歡樂不減少.png" width="400" alt="提醒標語(直式)">
