--- a/告示牌.html
+++ b/告示牌.html
@@ -16,7 +16,7 @@
         <img src = "https://github.com/yijie1122/-sign-design-web-/blob/main/%E4%B8%80%E6%AC%A1%E6%8B%BF%E4%B8%80%E5%80%8B%EF%BC%8C%E6%AD%A1%E6%A8%82%E4%B8%8D%E6%B8%9B%E5%B0%91.png" width="400" alt="提醒標語(直式)">
         <li>團體室公告</li>
         <P></P>
-        <img src = "團體室使用公告.png" width="400" alt="團體室公告">
+        <img src = "https://github.com/yijie1122/-sign-design-web-/blob/main/%E5%9C%98%E9%AB%94%E5%AE%A4%E4%BD%BF%E7%94%A8%E5%85%AC%E5%91%8A.png" width="400" alt="團體室公告">
         <li>塗鴉牆公告</li>
         <P></P>
         <img src = "塗鴉牆使用方式公告.png" width="400" alt="塗鴉牆公告">
