--- a/告示牌.html
+++ b/告示牌.html
@@ -19,7 +19,7 @@
         <img src = "https://github.com/yijie1122/-sign-design-web-/blob/main/%E5%9C%98%E9%AB%94%E5%AE%A4%E4%BD%BF%E7%94%A8%E5%85%AC%E5%91%8A.png" width="400" alt="團體室公告">
         <li>塗鴉牆公告</li>
         <P></P>
-        <img src = "塗鴉牆使用方式公告.png" width="400" alt="塗鴉牆公告">
+        <img src = "https://github.com/yijie1122/-sign-design-web-/blob/main/%E5%A1%97%E9%B4%89%E7%89%86%E4%BD%BF%E7%94%A8%E6%96%B9%E5%BC%8F%E5%85%AC%E5%91%8A.png" width="400" alt="塗鴉牆公告">
         <li>多功能教室公告</li>
         <P></P>
         <img src = "多功能教室.png" width="400" alt="多功能教室公告">
