--- a/告示牌.html
+++ b/告示牌.html
@@ -22,7 +22,7 @@
         <img src = "https://github.com/yijie1122/-sign-design-web-/blob/main/%E5%A1%97%E9%B4%89%E7%89%86%E4%BD%BF%E7%94%A8%E6%96%B9%E5%BC%8F%E5%85%AC%E5%91%8A.png" width="400" alt="塗鴉牆公告">
         <li>多功能教室公告</li>
         <P></P>
-        <img src = "多功能教室.png" width="400" alt="多功能教室公告">
+        <img src = "https://github.com/yijie1122/-sign-design-web-/blob/main/%E5%A4%9A%E5%8A%9F%E8%83%BD%E6%95%99%E5%AE%A4.png" width="400" alt="多功能教室公告">
         <li>爬行兒專區告示</li>
         <P></P>
         <img src = "爬行兒專區.png" width="400" alt="爬行兒專區告示">
