--- a/告示牌.html
+++ b/告示牌.html
@@ -25,7 +25,7 @@
         <img src = "https://github.com/yijie1122/-sign-design-web-/blob/main/%E5%A4%9A%E5%8A%9F%E8%83%BD%E6%95%99%E5%AE%A4.png" width="400" alt="多功能教室公告">
         <li>爬行兒專區告示</li>
         <P></P>
-        <img src = "爬行兒專區.png" width="400" alt="爬行兒專區告示">
+        <img src = "https://github.com/yijie1122/-sign-design-web-/blob/main/%E7%88%AC%E8%A1%8C%E5%85%92%E5%B0%88%E5%8D%80.png" width="400" alt="爬行兒專區告示">
         <li>警示</li>
         <P></P>
         <img src = "警示.png" width="400" alt="警示">
