--- a/告示牌.html
+++ b/告示牌.html
@@ -28,7 +28,7 @@
         <img src = "https://github.com/yijie1122/-sign-design-web-/blob/main/%E7%88%AC%E8%A1%8C%E5%85%92%E5%B0%88%E5%8D%80.png" width="400" alt="爬行兒專區告示">
         <li>警示</li>
         <P></P>
-        <img src = "警示.png" width="400" alt="警示">
+        <img src = "https://github.com/yijie1122/-sign-design-web-/blob/main/%E8%AD%A6%E7%A4%BA.png" width="400" alt="警示">
     </ul>
 </body>
     
