--- a/告示牌.html
+++ b/告示牌.html
@@ -10,25 +10,25 @@
     <ul>
         <li>提醒標語(橫式)</li>
         <P></P>
-        <img src = "https://github.com/yijie1122/-sign-design-web-/blob/main/%E4%B8%80%E6%AC%A1%E6%8B%BF%E4%B8%80%E5%80%8B%EF%BC%8C%E6%AD%A1%E6%A8%82%E4%B8%8D%E6%B8%9B%E5%B0%91%20(1).png" width="400" alt="提醒標語(橫式)">
+        <img src = ""image/一次拿一個，歡樂不減少 (1).png"" width="400" alt="提醒標語(橫式)">
         <li>提醒標語(直式)</li>
         <P></P>
-        <img src = "https://github.com/yijie1122/-sign-design-web-/blob/main/%E4%B8%80%E6%AC%A1%E6%8B%BF%E4%B8%80%E5%80%8B%EF%BC%8C%E6%AD%A1%E6%A8%82%E4%B8%8D%E6%B8%9B%E5%B0%91.png" width="400" alt="提醒標語(直式)">
+        <img src = "image/一次拿一個，歡樂不減少.png" width="400" alt="提醒標語(直式)">
         <li>團體室公告</li>
         <P></P>
-        <img src = "https://github.com/yijie1122/-sign-design-web-/blob/main/%E5%9C%98%E9%AB%94%E5%AE%A4%E4%BD%BF%E7%94%A8%E5%85%AC%E5%91%8A.png" width="400" alt="團體室公告">
+        <img src = "image/團體室使用公告.png" width="400" alt="團體室公告">
         <li>塗鴉牆公告</li>
         <P></P>
-        <img src = "https://github.com/yijie1122/-sign-design-web-/blob/main/%E5%A1%97%E9%B4%89%E7%89%86%E4%BD%BF%E7%94%A8%E6%96%B9%E5%BC%8F%E5%85%AC%E5%91%8A.png" width="400" alt="塗鴉牆公告">
+        <img src = "image/塗鴉牆使用方式公告.png" width="400" alt="塗鴉牆公告">
         <li>多功能教室公告</li>
         <P></P>
-        <img src = "https://github.com/yijie1122/-sign-design-web-/blob/main/%E5%A4%9A%E5%8A%9F%E8%83%BD%E6%95%99%E5%AE%A4.png" width="400" alt="多功能教室公告">
+        <img src = "image/多功能教室.png" width="400" alt="多功能教室公告">
         <li>爬行兒專區告示</li>
         <P></P>
-        <img src = "https://github.com/yijie1122/-sign-design-web-/blob/main/%E7%88%AC%E8%A1%8C%E5%85%92%E5%B0%88%E5%8D%80.png" width="400" alt="爬行兒專區告示">
+        <img src = "image/爬行兒專區.png" width="400" alt="爬行兒專區告示">
         <li>警示</li>
         <P></P>
-        <img src = "https://github.com/yijie1122/-sign-design-web-/blob/main/%E8%AD%A6%E7%A4%BA.png" width="400" alt="警示">
+        <img src = "image/警示.png" width="400" alt="警示">
     </ul>
 </body>
     
