--- a/告示牌.html
+++ b/告示牌.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <head>
     <meta charset = "utf-8">
     <title>公共設施告示牌畫廊</title>
@@ -31,4 +32,4 @@
         <img src = "image/警示.png" width="400" alt="警示">
     </ul>
 </body>
-    
+</html>    
