--- a/告示牌.html
+++ b/告示牌.html
@@ -11,7 +11,7 @@
     <ul>
         <li>提醒標語(橫式)</li>
         <P></P>
-        <img src = ""image/一次拿一個，歡樂不減少 (1).png"" width="400" alt="提醒標語(橫式)">
+        <img src = "image/一次拿一個，歡樂不減少 (1).png"" width="400" alt="提醒標語(橫式)">
         <li>提醒標語(直式)</li>
         <P></P>
         <img src = "image/一次拿一個，歡樂不減少.png" width="400" alt="提醒標語(直式)">
