--- a/告示牌.html
+++ b/告示牌.html
@@ -18,6 +18,7 @@
         <li>團體室公告</li>
         <P></P>
         <img src = "image/團體室使用公告.png" width="400" alt="團體室公告">
+        <img src = "image/團體教室使用公告.png" width="400" alt="團體教室公告">
         <li>塗鴉牆公告</li>
         <P></P>
         <img src = "image/塗鴉牆使用方式公告.png" width="400" alt="塗鴉牆公告">
