--- a/告示牌.html
+++ b/告示牌.html
@@ -1,36 +1,63 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset = "utf-8">
+    <meta charset="utf-8">
     <title>公共設施告示牌畫廊</title>
     <style>
-        
+        ul {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+            gap: 20px;
+            list-style-type: none;
+            padding: 0;
+        }
+
+        ul li {
+            text-align: center;
+        }
+
+        ul li img {
+            max-width: 100%;
+            height: auto;
+            display: block;
+            margin: 0 auto;
+        }
     </style>
 </head>
 <body>
     <ul>
-        <li>提醒標語(橫式)</li>
-        <P></P>
-        <img src = "image/一次拿一個，歡樂不減少 (1).png"" width="400" alt="提醒標語(橫式)">
-        <li>提醒標語(直式)</li>
-        <P></P>
-        <img src = "image/一次拿一個，歡樂不減少.png" width="400" alt="提醒標語(直式)">
-        <li>團體室公告</li>
-        <P></P>
-        <img src = "image/團體室使用公告.png" width="400" alt="團體室公告">
-        <img src = "image/團體教室使用公告.png" width="400" alt="團體教室公告">
-        <li>塗鴉牆公告</li>
-        <P></P>
-        <img src = "image/塗鴉牆使用方式公告.png" width="400" alt="塗鴉牆公告">
-        <li>多功能教室公告</li>
-        <P></P>
-        <img src = "image/多功能教室.png" width="400" alt="多功能教室公告">
-        <li>爬行兒專區告示</li>
-        <P></P>
-        <img src = "image/爬行兒專區.png" width="400" alt="爬行兒專區告示">
-        <li>警示</li>
-        <P></P>
-        <img src = "image/警示.png" width="400" alt="警示">
+        <li>
+            <p>提醒標語(橫式)</p>
+            <img src="image/一次拿一個，歡樂不減少 (1).png" alt="提醒標語(橫式)">
+        </li>
+        <li>
+            <p>提醒標語(直式)</p>
+            <img src="image/一次拿一個，歡樂不減少.png" alt="提醒標語(直式)">
+        </li>
+        <li>
+            <p>團體室公告</p>
+            <img src="image/團體室使用公告.png" alt="團體室公告">
+        </li>
+        <li>
+            <p>團體教室使用公告</p>
+            <img src="image/團體教室使用公告.png" alt="團體教室公告">
+        </li>
+        <li>
+            <p>塗鴉牆公告</p>
+            <img src="image/塗鴉牆使用方式公告.png" alt="塗鴉牆公告">
+        </li>
+        <li>
+            <p>多功能教室公告</p>
+            <img src="image/多功能教室.png" alt="多功能教室公告">
+        </li>
+        <li>
+            <p>爬行兒專區告示</p>
+            <img src="image/爬行兒專區.png" alt="爬行兒專區告示">
+        </li>
+        <li>
+            <p>警示</p>
+            <img src="image/警示.png" alt="警示">
+        </li>
     </ul>
 </body>
-</html>    
+</html>
