--- a/告示牌.html
+++ b/告示牌.html
@@ -15,7 +15,7 @@
         <li>提醒標語(直式)</li>
         <P></P>
         <img src = "image/一次拿一個，歡樂不減少.png" width="400" alt="提醒標語(直式)">
-        <img src = "<img src = 玩具.png width="400" alt="提醒標語(直式)">
+        <img src = "image/玩具.png" width="400" alt="提醒標語(直式)">
         <li>團體室公告</li>
         <P></P>
         <img src = "image/團體室使用公告.png" width="400" alt="團體室公告">
