--- a/告示牌.html
+++ b/告示牌.html
@@ -26,6 +26,7 @@
         <li>多功能教室公告</li>
         <P></P>
         <img src = "image/多功能教室.png" width="400" alt="多功能教室公告">
+        <img src = "image/多功能教室01.png" width="400" alt="多功能教室公告">
         <li>爬行兒專區告示</li>
         <P></P>
         <img src = "image/爬行兒專區.png" width="400" alt="爬行兒專區告示">
