--- a/告示牌.html
+++ b/告示牌.html
@@ -4,7 +4,9 @@
     <meta charset = "utf-8">
     <title>公共設施告示牌畫廊</title>
     <style>
-        
+        ul li {
+            gap: 20px;
+        }
     </style>
 </head>
 <body>
