--- a/告示牌.html
+++ b/告示牌.html
@@ -9,16 +9,17 @@
             margin: 20px;
         }
 
-        ul {
-            list-style-type: none;
-            padding: 0;
+        form {
             display: flex;
             flex-direction: column;
             gap: 20px;
         }
 
-        ul li {
-            text-align: center;
+        .form-group {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 10px;
         }
 
         .inline-images {
@@ -27,50 +28,78 @@
             gap: 20px;
         }
 
-        ul li img {
+        .form-group img {
             max-width: 100%;
             height: auto;
             display: block;
-            margin: 0 auto;
+        }
+
+        .form-group input[type="checkbox"] {
+            margin-bottom: 10px;
         }
     </style>
 </head>
 <body>
-    <ul>
-        <li>
-            <p>提醒標語(橫式)</p>
+    <form>
+        <div class="form-group">
+            <label>
+                <input type="checkbox" name="reminder-horizontal">
+                提醒標語(橫式)
+            </label>
             <img src="image/一次拿一個，歡樂不減少 (1).png" width="400" alt="提醒標語(橫式)">
-        </li>
-        <li>
-            <p>提醒標語(直式)</p>
+        </div>
+        <div class="form-group">
+            <label>
+                <input type="checkbox" name="reminder-vertical">
+                提醒標語(直式)
+            </label>
             <img src="image/一次拿一個，歡樂不減少.png" width="400" alt="提醒標語(直式)">
             <img src="image/玩具.png" width="400" alt="提醒標語(直式)">
-        </li>
-        <li>
-            <p>團體室公告</p>
+        </div>
+        <div class="form-group">
+            <label>
+                <input type="checkbox" name="group-room">
+                團體室公告
+            </label>
             <div class="inline-images">
                 <img src="image/團體室使用公告.png" width="400" alt="團體室公告">
                 <img src="image/團體教室使用公告.png" width="400" alt="團體教室公告">
             </div>
-        </li>
-        <li>
-            <p>塗鴉牆公告</p>
+        </div>
+        <div class="form-group">
+            <label>
+                <input type="checkbox" name="graffiti-wall">
+                塗鴉牆公告
+            </label>
             <img src="image/塗鴉牆使用方式公告.png" width="400" alt="塗鴉牆公告">
-        </li>
-        <li>
-            <p>多功能教室公告</p>
-            <img src="image/多功能教室.png" width="400" alt="多功能教室公告">
-            <img src="image/多功能教室01.png" width="400" alt="多功能教室公告">
-        </li>
-        <li>
-            <p>爬行兒專區告示</p>
+        </div>
+        <div class="form-group">
+            <label>
+                <input type="checkbox" name="multi-purpose-room">
+                多功能教室公告
+            </label>
+            <div class="inline-images">
+                <img src="image/多功能教室.png" width="400" alt="多功能教室公告">
+                <img src="image/多功能教室01.png" width="400" alt="多功能教室公告">
+            </div>
+        </div>
+        <div class="form-group">
+            <label>
+                <input type="checkbox" name="crawling-area">
+                爬行兒專區告示
+            </label>
             <img src="image/爬行兒專區.png" width="400" alt="爬行兒專區告示">
-        </li>
-        <li>
-            <p>警示</p>
-            <img src="image/警示.png" width="400" alt="警示">
-            <img src="image/注意！.png" width="400" alt="警示">
-        </li>
-    </ul>
+        </div>
+        <div class="form-group">
+            <label>
+                <input type="checkbox" name="warning">
+                警示
+            </label>
+            <div class="inline-images">
+                <img src="image/警示.png" width="400" alt="警示">
+                <img src="image/注意！.png" width="400" alt="警示">
+            </div>
+        </div>
+    </form>
 </body>
 </html>
