--- a/告示牌.html
+++ b/告示牌.html
@@ -34,8 +34,11 @@
             display: block;
         }
 
-        .form-group input[type="checkbox"] {
+        .form-group label {
             margin-bottom: 10px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
     </style>
 </head>
