--- a/告示牌.html
+++ b/告示牌.html
@@ -46,7 +46,6 @@
     <form>
         <div class="form-group">
             <label>
-                <input type="checkbox" name="reminder-horizontal">
                 提醒標語(橫式)
             </label>
             <img src="image/一次拿一個，歡樂不減少 (1).png" width="400" alt="提醒標語(橫式)">
@@ -56,8 +55,12 @@
                 <input type="checkbox" name="reminder-vertical">
                 提醒標語(直式)
             </label>
-            <img src="image/一次拿一個，歡樂不減少.png" width="400" alt="提醒標語(直式)">
-            <img src="image/玩具.png" width="400" alt="提醒標語(直式)">
+            <div class="inline-images">
+                <input type="checkbox" name="reminder-horizontal">
+                <img src="image/一次拿一個，歡樂不減少.png" width="400" alt="提醒標語(直式)">
+                <input type="checkbox" name="reminder-horizontal">
+                <img src="image/玩具.png" width="400" alt="提醒標語(直式)">
+            </div>
         </div>
         <div class="form-group">
             <label>
