--- a/告示牌.html
+++ b/告示牌.html
@@ -25,6 +25,7 @@
         .inline-images {
             display: flex;
             justify-content: center;
+            align-items: center;
             gap: 20px;
         }
 
@@ -52,57 +53,63 @@
         </div>
         <div class="form-group">
             <label>
-                <input type="checkbox" name="reminder-vertical">
                 提醒標語(直式)
             </label>
             <div class="inline-images">
-                <input type="checkbox" name="reminder-horizontal">
+                <input type="checkbox" name="reminder-vertical-1">
                 <img src="image/一次拿一個，歡樂不減少.png" width="400" alt="提醒標語(直式)">
-                <input type="checkbox" name="reminder-horizontal">
+                <input type="checkbox" name="reminder-vertical-2">
                 <img src="image/玩具.png" width="400" alt="提醒標語(直式)">
             </div>
         </div>
         <div class="form-group">
             <label>
-                <input type="checkbox" name="group-room">
                 團體室公告
             </label>
             <div class="inline-images">
+                <input type="checkbox" name="group-room-1">
                 <img src="image/團體室使用公告.png" width="400" alt="團體室公告">
+                <input type="checkbox" name="group-room-2">
                 <img src="image/團體教室使用公告.png" width="400" alt="團體教室公告">
             </div>
         </div>
         <div class="form-group">
             <label>
-                <input type="checkbox" name="graffiti-wall">
                 塗鴉牆公告
             </label>
-            <img src="image/塗鴉牆使用方式公告.png" width="400" alt="塗鴉牆公告">
+            <div class="inline-images">
+                <input type="checkbox" name="graffiti-wall">
+                <img src="image/塗鴉牆使用方式公告.png" width="400" alt="塗鴉牆公告">
+            </div>
         </div>
         <div class="form-group">
             <label>
-                <input type="checkbox" name="multi-purpose-room">
                 多功能教室公告
             </label>
             <div class="inline-images">
+                <input type="checkbox" name="multi-purpose-room-1">
                 <img src="image/多功能教室.png" width="400" alt="多功能教室公告">
+                <input type="checkbox" name="multi-purpose-room-2">
                 <img src="image/多功能教室01.png" width="400" alt="多功能教室公告">
             </div>
         </div>
         <div class="form-group">
             <label>
-                <input type="checkbox" name="crawling-area">
                 爬行兒專區告示
             </label>
-            <img src="image/爬行兒專區.png" width="400" alt="爬行兒專區告示">
+            <div class="inline-images">
+                <input type="checkbox" name="crawling-area">
+                <img src="image/爬行兒專區.png" width="400" alt="爬行兒專區告示">
+            </div>
         </div>
         <div class="form-group">
             <label>
-                <input type="checkbox" name="warning">
                 警示
             </label>
             <div class="inline-images">
+                <input type="checkbox" name="warning-1">
                 <img src="image/警示.png" width="400" alt="警示">
+                <input type="checkbox" name="warning-2">
                 <img src="image/注意！.png" width="400" alt="警示">
             </div>
         </div>
