--- a/告示牌.html
+++ b/告示牌.html
@@ -47,6 +47,7 @@
     <form>
         <div class="form-group">
             <label>
+                <input type="checkbox" name="reminder-horizontal">
                 提醒標語(橫式)
             </label>
             <img src="image/一次拿一個，歡樂不減少 (1).png" width="400" alt="提醒標語(橫式)">
@@ -56,10 +57,14 @@
                 提醒標語(直式)
             </label>
             <div class="inline-images">
-                <input type="checkbox" name="reminder-vertical-1">
-                <img src="image/一次拿一個，歡樂不減少.png" width="400" alt="提醒標語(直式)">
-                <input type="checkbox" name="reminder-vertical-2">
-                <img src="image/玩具.png" width="400" alt="提醒標語(直式)">
+                <div>
+                    <input type="checkbox" name="reminder-vertical-1">
+                    <img src="image/一次拿一個，歡樂不減少.png" width="400" alt="提醒標語(直式)">
+                </div>
+                <div>
+                    <input type="checkbox" name="reminder-vertical-2">
+                    <img src="image/玩具.png" width="400" alt="提醒標語(直式)">
+                </div>
             </div>
         </div>
         <div class="form-group">
@@ -67,10 +72,14 @@
                 團體室公告
             </label>
             <div class="inline-images">
-                <input type="checkbox" name="group-room-1">
-                <img src="image/團體室使用公告.png" width="400" alt="團體室公告">
-                <input type="checkbox" name="group-room-2">
-                <img src="image/團體教室使用公告.png" width="400" alt="團體教室公告">
+                <div>
+                    <input type="checkbox" name="group-room-1">
+                    <img src="image/團體室使用公告.png" width="400" alt="團體室公告">
+                </div>
+                <div>
+                    <input type="checkbox" name="group-room-2">
+                    <img src="image/團體教室使用公告.png" width="400" alt="團體教室公告">
+                </div>
             </div>
         </div>
         <div class="form-group">
@@ -87,10 +96,14 @@
                 多功能教室公告
             </label>
             <div class="inline-images">
-                <input type="checkbox" name="multi-purpose-room-1">
-                <img src="image/多功能教室.png" width="400" alt="多功能教室公告">
-                <input type="checkbox" name="multi-purpose-room-2">
-                <img src="image/多功能教室01.png" width="400" alt="多功能教室公告">
+                <div>
+                    <input type="checkbox" name="multi-purpose-room-1">
+                    <img src="image/多功能教室.png" width="400" alt="多功能教室公告">
+                </div>
+                <div>
+                    <input type="checkbox" name="multi-purpose-room-2">
+                    <img src="image/多功能教室01.png" width="400" alt="多功能教室公告">
+                </div>
             </div>
         </div>
         <div class="form-group">
@@ -107,10 +120,14 @@
                 警示
             </label>
             <div class="inline-images">
-                <input type="checkbox" name="warning-1">
-                <img src="image/警示.png" width="400" alt="警示">
-                <input type="checkbox" name="warning-2">
-                <img src="image/注意！.png" width="400" alt="警示">
+                <div>
+                    <input type="checkbox" name="warning-1">
+                    <img src="image/警示.png" width="400" alt="警示">
+                </div>
+                <div>
+                    <input type="checkbox" name="warning-2">
+                    <img src="image/注意！.png" width="400" alt="警示">
+                </div>
             </div>
         </div>
     </form>
