--- a/告示牌.html
+++ b/告示牌.html
@@ -59,8 +59,8 @@
         <div class="form-group">
             <label>提醒標語(橫式)</label>
             <div class="inline-checkbox">
-                <label><input type="checkbox" name="reminder-horizontal" value="可以採用">可以採用</label>
-                <label><input type="checkbox" name="reminder-horizontal" value="再想一下 謝謝!">再想一下 謝謝!</label>
+                <input type="checkbox" name="reminder-horizontal" value="可以採用">可以採用
+                <input type="checkbox" name="reminder-horizontal" value="再想一下 謝謝!">再想一下 謝謝!
             </div>
             <img src="image/一次拿一個，歡樂不減少 (1).png" width="400" alt="提醒標語(橫式)">
         </div>
