--- a/告示牌.html
+++ b/告示牌.html
@@ -69,13 +69,13 @@
             <div class="inline-images">
                 <div>
                     <div class="inline-checkbox">
-                        <label><input type="checkbox" name="reminder-vertical-1-accept" value="提醒標語(直式)-1">提醒標語(直式)-1</label>
+                        <input type="checkbox" name="reminder-vertical-1-accept" value="提醒標語(直式)-1">提醒標語(直式)-1
                     </div>
                     <img src="image/一次拿一個，歡樂不減少.png" width="400" alt="提醒標語(直式)">
                 </div>
                 <div>
                     <div class="inline-checkbox">
-                        <label><input type="checkbox" name="reminder-vertical-1-reject" value="提醒標語(直式)-2">提醒標語(直式)-2</label>
+                        <input type="checkbox" name="reminder-vertical-1-reject" value="提醒標語(直式)-2">提醒標語(直式)-2
                     </div>
                     <img src="image/玩具.png" width="400" alt="提醒標語(直式)">
                 </div>
