--- a/告示牌.html
+++ b/告示牌.html
@@ -29,7 +29,9 @@
             margin-bottom: 10px;
         }
 
-        .inline-checkbox input {
+        .inline-checkbox label {
+            display: flex;
+            align-items: center;
             margin: 0 10px;
         }
 
@@ -59,8 +61,8 @@
         <div class="form-group">
             <label>提醒標語(橫式)</label>
             <div class="inline-checkbox">
-                <input type="checkbox" name="reminder-horizontal" value="可以採用">可以採用
-                <input type="checkbox" name="reminder-horizontal" value="再想一下 謝謝!">再想一下 謝謝!
+                <label><input type="checkbox" name="reminder-horizontal" value="可以採用">可以採用</label>
+                <label><input type="checkbox" name="reminder-horizontal" value="再想一下 謝謝!">再想一下 謝謝!</label>
             </div>
             <img src="image/一次拿一個，歡樂不減少 (1).png" width="400" alt="提醒標語(橫式)">
         </div>
@@ -69,13 +71,15 @@
             <div class="inline-images">
                 <div>
                     <div class="inline-checkbox">
-                        <input type="checkbox" name="reminder-vertical-1-accept" value="提醒標語(直式)-1">提醒標語(直式)-1
+                        <label><input type="checkbox" name="reminder-vertical-1-accept" value="可以採用">可以採用</label>
+                        <label><input type="checkbox" name="reminder-vertical-1-reject" value="再想一下 謝謝!">再想一下 謝謝!</label>
                     </div>
                     <img src="image/一次拿一個，歡樂不減少.png" width="400" alt="提醒標語(直式)">
                 </div>
                 <div>
                     <div class="inline-checkbox">
-                        <input type="checkbox" name="reminder-vertical-1-reject" value="提醒標語(直式)-2">提醒標語(直式)-2
+                        <label><input type="checkbox" name="reminder-vertical-2-accept" value="可以採用">可以採用</label>
+                        <label><input type="checkbox" name="reminder-vertical-2-reject" value="再想一下 謝謝!">再想一下 謝謝!</label>
                     </div>
                     <img src="image/玩具.png" width="400" alt="提醒標語(直式)">
                 </div>
