--- a/告示牌.html
+++ b/告示牌.html
@@ -61,8 +61,8 @@
         <div class="form-group">
             <label>提醒標語(橫式)</label>
             <div class="inline-checkbox">
-                <label><input type="checkbox" name="reminder-horizontal" value="可以採用">可以採用</label>
-                <label><input type="checkbox" name="reminder-horizontal" value="再想一下 謝謝!">再想一下 謝謝!</label>
+                <input type="checkbox" name="reminder-horizontal" value="可以採用">可以採用
+                <input type="checkbox" name="reminder-horizontal" value="再想一下 謝謝!">再想一下 謝謝!
             </div>
             <img src="image/一次拿一個，歡樂不減少 (1).png" width="400" alt="提醒標語(橫式)">
         </div>
@@ -71,15 +71,13 @@
             <div class="inline-images">
                 <div>
                     <div class="inline-checkbox">
-                        <label><input type="checkbox" name="reminder-vertical-1-accept" value="可以採用">可以採用</label>
-                        <label><input type="checkbox" name="reminder-vertical-1-reject" value="再想一下 謝謝!">再想一下 謝謝!</label>
+                        <input type="checkbox" name="reminder-vertical-1-accept" value="提醒標語(直式)-1">提醒標語(直式)-1</label>
                     </div>
                     <img src="image/一次拿一個，歡樂不減少.png" width="400" alt="提醒標語(直式)">
                 </div>
                 <div>
                     <div class="inline-checkbox">
-                        <label><input type="checkbox" name="reminder-vertical-2-accept" value="可以採用">可以採用</label>
-                        <label><input type="checkbox" name="reminder-vertical-2-reject" value="再想一下 謝謝!">再想一下 謝謝!</label>
+                        <input type="checkbox" name="reminder-vertical-2-accept" value="提醒標語(直式)-2">提醒標語(直式)-2
                     </div>
                     <img src="image/玩具.png" width="400" alt="提醒標語(直式)">
                 </div>
@@ -90,15 +88,13 @@
             <div class="inline-images">
                 <div>
                     <div class="inline-checkbox">
-                        <label><input type="checkbox" name="group-room-1-accept" value="可以採用">可以採用</label>
-                        <label><input type="checkbox" name="group-room-1-reject" value="再想一下 謝謝!">再想一下 謝謝!</label>
+                        <input type="checkbox" name="group-room-1-accept" value="團體室公告-1">團體室公告-1
                     </div>
                     <img src="image/團體室使用公告.png" width="400" alt="團體室公告">
                 </div>
                 <div>
                     <div class="inline-checkbox">
-                        <label><input type="checkbox" name="group-room-2-accept" value="可以採用">可以採用</label>
-                        <label><input type="checkbox" name="group-room-2-reject" value="再想一下 謝謝!">再想一下 謝謝!</label>
+                        <input type="checkbox" name="group-room-2-accept" value="團體室公告-2">團體室公告-2
                     </div>
                     <img src="image/團體教室使用公告.png" width="400" alt="團體教室公告">
                 </div>
@@ -117,15 +113,13 @@
             <div class="inline-images">
                 <div>
                     <div class="inline-checkbox">
-                        <label><input type="checkbox" name="multi-purpose-room-1-accept" value="可以採用">可以採用</label>
-                        <label><input type="checkbox" name="multi-purpose-room-1-reject" value="再想一下 謝謝!">再想一下 謝謝!</label>
+                        <input type="checkbox" name="multi-purpose-room-1-accept" value="多功能教室公告-1">多功能教室公告-1
                     </div>
                     <img src="image/多功能教室.png" width="400" alt="多功能教室公告">
                 </div>
                 <div>
                     <div class="inline-checkbox">
-                        <label><input type="checkbox" name="multi-purpose-room-2-accept" value="可以採用">可以採用</label>
-                        <label><input type="checkbox" name="multi-purpose-room-2-reject" value="再想一下 謝謝!">再想一下 謝謝!</label>
+                        <input type="checkbox" name="multi-purpose-room-2-accept" value="多功能教室公告-2">多功能教室公告-2
                     </div>
                     <img src="image/多功能教室01.png" width="400" alt="多功能教室公告">
                 </div>
@@ -140,19 +134,17 @@
             <img src="image/爬行兒專區.png" width="400" alt="爬行兒專區告示">
         </div>
         <div class="form-group">
-            <label>警示</label>
+            <label>安全警示</label>
             <div class="inline-images">
                 <div>
                     <div class="inline-checkbox">
-                        <label><input type="checkbox" name="warning-1-accept" value="可以採用">可以採用</label>
-                        <label><input type="checkbox" name="warning-1-reject" value="再想一下 謝謝!">再想一下 謝謝!</label>
+                        <input type="checkbox" name="warning-1-accept" value="安全警示-1">安全警示-1
                     </div>
                     <img src="image/警示.png" width="400" alt="警示">
                 </div>
                 <div>
                     <div class="inline-checkbox">
-                        <label><input type="checkbox" name="warning-2-accept" value="可以採用">可以採用</label>
-                        <label><input type="checkbox" name="warning-2-reject" value="再想一下 謝謝!">再想一下 謝謝!</label>
+                        <input type="checkbox" name="warning-2-accept" value="安全警示-2">安全警示-2
                     </div>
                     <img src="image/注意！.png" width="400" alt="警示">
                 </div>
