--- a/告示牌.html
+++ b/告示牌.html
@@ -69,8 +69,12 @@
         <div class="form-group">
             <label>提醒標語(直式)</label>
             <div class="inline-images">
-                <input type="checkbox" name="reminder-vertical-1-accept" value="提醒標語(直式)-1">提醒標語(直式)-1
-                <img src="image/一次拿一個，歡樂不減少.png" width="400" alt="提醒標語(直式)">
+                <div>
+                    <div class="inline-checkbox">
+                        <input type="checkbox" name="reminder-vertical-1-accept" value="提醒標語(直式)-1">提醒標語(直式)-1  
+                    </div>
+                    <img src="image/一次拿一個，歡樂不減少.png" width="400" alt="提醒標語(直式)">
+                </div>
                 <div>
                     <div class="inline-checkbox">
                         <input type="checkbox" name="reminder-vertical-2-accept" value="提醒標語(直式)-2">提醒標語(直式)-2
