--- a/告示牌.html
+++ b/告示牌.html
@@ -25,7 +25,7 @@
         .inline-checkbox {
             display: flex;
             justify-content: space-between;
-            //width: 400px; /* 確保寬度與圖片一致 */
+            width: 400px; /* 確保寬度與圖片一致 */
             margin-bottom: 10px;
         }
 
