--- a/告示牌.html
+++ b/告示牌.html
@@ -103,8 +103,8 @@
         <div class="form-group">
             <label>塗鴉牆公告</label>
             <div class="inline-checkbox">
-                <label><input type="checkbox" name="graffiti-wall-accept" value="可以採用">可以採用</label>
-                <label><input type="checkbox" name="graffiti-wall-reject" value="再想一下 謝謝!">再想一下 謝謝!</label>
+                <input type="checkbox" name="graffiti-wall-accept" value="可以採用">可以採用
+                <input type="checkbox" name="graffiti-wall-reject" value="再想一下 謝謝!">再想一下 謝謝!
             </div>
             <img src="image/塗鴉牆使用方式公告.png" width="400" alt="塗鴉牆公告">
         </div>
@@ -128,8 +128,8 @@
         <div class="form-group">
             <label>爬行兒專區告示</label>
             <div class="inline-checkbox">
-                <label><input type="checkbox" name="crawling-area-accept" value="可以採用">可以採用</label>
-                <label><input type="checkbox" name="crawling-area-reject" value="再想一下 謝謝!">再想一下 謝謝!</label>
+                <input type="checkbox" name="crawling-area-accept" value="可以採用">可以採用
+                <input type="checkbox" name="crawling-area-reject" value="再想一下 謝謝!">再想一下 謝謝!
             </div>
             <img src="image/爬行兒專區.png" width="400" alt="爬行兒專區告示">
         </div>
