--- a/告示牌.html
+++ b/告示牌.html
@@ -15,6 +15,10 @@
             gap: 20px;
         }
 
+        label {
+            font-size: 30px; /* 假設字體大小為 20 像素 */
+        }
+        
         .form-group {
             display: flex;
             flex-direction: column;
