--- a/告示牌.html
+++ b/告示牌.html
@@ -154,7 +154,7 @@
                 </div>
             </div>
         </div>
-        <input type="submit">
+        <input type="submit" value="提交">
     </form>
 </body>
 </html>
